# paper-search

./: .dockerignore  README.md  pyproject.toml
docs/: TODO.md
docs/plans/: 2026-03-19-paper-search-refactor.md
paper_search/: __init__.py  config.py  utils.py
paper_search/connectors/: __init__.py  arxiv.py  base.py  biorxiv.py  citeseerx.py  core.py  crossref.py  dblp.py  doaj.py  europepmc.py  google_scholar.py  hal.py  iacr.py  medrxiv.py  openaire.py  openalex.py  pmc.py  pubmed.py  registry.py  semantic.py  ssrn.py  zenodo.py
paper_search/models/: __init__.py  paper.py
paper_search/service/: __init__.py  download_service.py  export_service.py
paper_search/transports/: mcp_server.py
tests/: test_download_service.py  test_export_service.py  test_models.py
